Fri Jul 22 11:07:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PI/ORBInitInfo.cpp:
        * tao/ORB.cpp:
        * tao/Object_Ref_Table.{h,inl}:
          Corrected exceptions that should be thrown when a duplicate or
          invalid name is passed with register_initial_reference. Also
          removed some not needed exception argument macros. Fixes bug
          2087 and the associated regression test now works fine

Fri Jul 22 10:26:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Object_Ref_Table.inl (register_initial_reference):
          When passed a nil object reference, throw a BAD_PARAM exception with
          minor code 27

Fri Jul 22 10:07:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Table.cpp:
          In the unbind, assign a default constructed refcount so that we
          drop the refcount on the orb at this moment. It seems the array_map
          keeps a refcount and only destructs then the ORB at process exit
          and this causes then crashes with RTCorba.

Fri Jul 22 09:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/ValueBox/client.cpp:
          Fixed invalid remove_ref call

Fri Jul 22 09:42:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Log/BasicLogFactory_i.cpp:
        * orbsvcs/orbsvcs/Log/EventLogFactory_i.cpp:
        * orbsvcs/orbsvcs/Log/Hash_LogStore.cpp:
        * orbsvcs/orbsvcs/Log/NotifyLogFactory_i.cpp:
        * orbsvcs/orbsvcs/Log/RTEventLogFactory_i.cpp:
          Fixed implicit conversion warning

Fri Jul 22 09:34:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/ValueBox/client.cpp:
          When assigning a hardcoded string, use CORBA::string_dup else
          we get a crash when trying to free the string with some
          runtimes.

Fri Jul 22 09:21:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/ValueBox/client.cpp: